[package]
name = "boardroom_querying"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch_cnames"
path = "src/fetch_cnames.rs"

[[bin]]
name = "data_querying"
path = "src/main.rs"

[[bin]]
name = "data_digestion"
path = "src/analyzer.rs"

[dependencies]
chrono = "0.4"
csv = "1.3.0"
env_logger = "0.10"
itertools = "0.13.0"
log = "0.4.22"
reqwest = "0.11"
serde = "1.0.204"
serde_json = "1.0.120"
serde_derive = "1.0.204"
tokio = { version = "1", features = ["full"] }
